# photos-ai

./: .env.example  .gitignore  LICENSE  README.md  install.sh  photo_analyze.py  photos-cli.py  photos_daemon.py  pyproject.toml  runtime_config.py
docs/: models.md  release-checklist.md
scripts/: bootstrap.sh  doctor.sh  launchd.sh  run.sh
